# hass-aruba-1930

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  hacs.json  pyproject.toml
.agents/skills/ha-semver-release/: SKILL.md
.agents/skills/ha-semver-release/scripts/: bump_version.py  generate_changelog.py
.github/workflows/: ci-release.yml
aruba1930api/: __init__.py  main.py  settings.py  switch_client.py
custom_components/aruba1930/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json  switch.py  switch_client.py
custom_components/aruba1930/translations/: en.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py  test_settings.py  test_switch.py  test_switch_client.py
