[project]
name = "aruba1930api"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "cryptography>=42",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.9",
    "voluptuous>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aruba1930api", "custom_components/aruba1930"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = [
    "ANN401",  # Any sometimes required (e.g. cryptography key types)
    "B008",    # Depends() in defaults is idiomatic FastAPI
    "S101",    # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"aruba1930api/switch_client.py" = ["S314"]  # XML from trusted local switch
"custom_components/aruba1930/switch_client.py" = ["S314"]  # Same trusted switch XML parser
"custom_components/**" = ["ANN"]  # HA patterns: hass arg annotations not required

[tool.mypy]
python_version = "3.11"
strict = true
